--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,13 +9,13 @@
         <header>
             <h1>{% block page_name %}{% endblock page_name %}</h1>
             <div class="header_content">
-                LIT Review
+                <h2>LIT Review</h2>
                 <nav>
                     {% if user.is_authenticated %}
-                    <li>Flux</li>
-                    <li>Posts</li>
-                    <li>Abonnements</li>
-                    <li>Se déconnecter</li>
+                    <li><a href="{% url 'flux' %}">Flux</a></li>
+                    <li><a href="{% url 'create_ticket' %}">Posts</a></li>
+                    <li><a href="{% url 'follows' %}">Abonnements</a></li>
+                    <li><a href="{% url 'logout' %}">Se déconnecter</a></li>
                     {% endif %}
                 </nav>
             </div>
