--- a/app/website/templates/website/flux.html
+++ b/app/website/templates/website/flux.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
 {% block page_name %}Flux{% endblock page_name %}
 {% block main_content %}
+<div>
+    <div>
+<button type="button" onclick="window.location.href='{% url 'create_ticket' %}'" class="button">Demander une critique</button>
+<button type="button" onclick="window.location.href='{% url 'create_standalone_review' %}'" class="button">Créer une critique</button>
+    </div>
+</div>
 {% endblock main_content%}
