--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,9 @@
         <header>
             <h1>{% block page_name %}{% endblock page_name %}</h1>
             <div class="header_content">
+                {% if user.is_authenticated %}
+                <span>Connecté en tant que <b>{{ user.username }}</b></span>
+                {% endif %}
                 <h2>LIT Review</h2>
                 <nav>
                     {% if user.is_authenticated %}
