--- a/app/website/templates/website/create-ticket.html
+++ b/app/website/templates/website/create-ticket.html
@@ -1,4 +1,12 @@
 {% extends "base.html" %}
 {% block page_name %}Créer un ticket{% endblock page_name %}
 {% block main_content %}
+<div>
+    <p>Créer un ticket</p>
+    <p>{{ message }}</p>
+    <form method="post" enctype="multipart/form-data">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <button type="submit" class="button follow-button">Créer</button>
+    </form>
 {% endblock main_content%}
