--- a/website/templates/website/create-std-review.html
+++ b/website/templates/website/create-std-review.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} | Créer une critique{% endblock title %}
 {% block page_name %}Créer une critique<br><sub>(pas en réponse à un ticket)</sub>{% endblock page_name %}
 {% block main_content %}
 <div>
