--- a/website/templates/website/create-ticket.html
+++ b/website/templates/website/create-ticket.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} | Créer un ticket{% endblock title %}
 {% block page_name %}Créer un ticket{% endblock page_name %}
 {% block main_content %}
 <div>
