--- a/website/templates/website/edit-ticket.html
+++ b/website/templates/website/edit-ticket.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} | Modifier un ticket{% endblock title %}
 {% block page_name %}Modifier un ticket{% endblock page_name %}
 {% block main_content %}<div>
     <p>Modifier un ticket</p>
