--- a/website/templates/website/edit-ticket.html
+++ b/website/templates/website/edit-ticket.html
@@ -11,11 +11,13 @@
 
         {% if ticket.image %}
             <div style="margin-bottom: 10px;">
-                <p>Image actuelle :</p>
+                <label for="id_image">Image actuelle :</label>
                 <img src="{{ ticket.image.url }}" alt="Image actuelle" style="max-width: 200px; max-height: 200px;">
             </div>
         {% endif %}
 
+        
+        <label for="id_image">Nouvelle Image :</label>
         {{ form.image }}
         <button type="submit" class="button">Valider</button>
         <button class="button"><a href="{% url 'posts' %}">Annuler</a></button>
