--- a/website/templates/website/posts.html
+++ b/website/templates/website/posts.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% load custom_filters %}
-{% block page_name %}Voir vos propres posts{% endblock page_name %}
+{% block page_name %}Vos posts{% endblock page_name %}
 {% block main_content %}
 <div>
-    <h2>Vos posts</h2>
     <div class="posts-list">
         {% for post in posts %}
             <div class="post">
