Mise aux normes PEP8

--- a/static/styles.css
+++ b/static/styles.css
@@ -47,6 +47,10 @@ h1 {
     font-weight: bold;
 }
 
+.clearablefileinput a {
+    display: none;
+}
+
 main {
     display: flex;
     flex-direction: row;
