--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
         <title>LIT Review{% block title %}{% endblock title %}</title>
         <link rel="stylesheet" href="{% static 'styles.css' %}">
         <script type="text/javascript" src="{% static 'scripts.js' %}"></script>
+        <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
     </head>
     <body>
         {% block header %}
